// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data telemetry collection tasks indices_stats returns a map of index stats 1`] = `
Object {
  "indices": Object {
    "all": Object {
      "total": Object {
        "docs": Object {
          "count": 2,
        },
        "store": Object {
          "size_in_bytes": 100,
        },
      },
    },
    "metric": Object {
      "all": Object {
        "total": Object {
          "docs": Object {
            "count": 2,
          },
          "store": Object {
            "size_in_bytes": 100,
          },
        },
      },
      "metricset": Object {
        "app": Object {
          "1d": Object {
            "doc_count": 6,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_destination-10m": Object {
          "1d": Object {
            "doc_count": 3,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_destination-1m": Object {
          "1d": Object {
            "doc_count": 3,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_destination-60m": Object {
          "1d": Object {
            "doc_count": 3,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_summary-10m": Object {
          "1d": Object {
            "doc_count": 9,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_summary-1m": Object {
          "1d": Object {
            "doc_count": 12,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_summary-60m": Object {
          "1d": Object {
            "doc_count": 9,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_transaction-10m": Object {
          "1d": Object {
            "doc_count": 6,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_transaction-1m": Object {
          "1d": Object {
            "doc_count": 6,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "service_transaction-60m": Object {
          "1d": Object {
            "doc_count": 6,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "span_breakdown-10m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "span_breakdown-1m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "span_breakdown-60m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "transaction-10m": Object {
          "1d": Object {
            "doc_count": 6,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "transaction-1m": Object {
          "1d": Object {
            "doc_count": 6,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
        "transaction-60m": Object {
          "1d": Object {
            "doc_count": 6,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 1,
              },
              "shards": 2,
              "store": Object {
                "size_in_bytes": 50,
              },
            },
          },
        },
      },
      "shards": Object {
        "total": 2,
      },
    },
    "shards": Object {
      "total": 2,
    },
    "traces": Object {
      "all": Object {
        "total": Object {
          "docs": Object {
            "count": 2,
          },
          "store": Object {
            "size_in_bytes": 100,
          },
        },
      },
      "shards": Object {
        "total": 2,
      },
    },
  },
}
`;

exports[`data telemetry collection tasks indices_stats with no results 1`] = `
Object {
  "indices": Object {
    "all": Object {
      "total": Object {
        "docs": Object {
          "count": 0,
        },
        "store": Object {
          "size_in_bytes": 0,
        },
      },
    },
    "metric": Object {
      "all": Object {
        "total": Object {
          "docs": Object {
            "count": 0,
          },
          "store": Object {
            "size_in_bytes": 0,
          },
        },
      },
      "metricset": Object {
        "app": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_destination-10m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_destination-1m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_destination-60m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_summary-10m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_summary-1m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_summary-60m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_transaction-10m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_transaction-1m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "service_transaction-60m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "span_breakdown-10m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "span_breakdown-1m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "span_breakdown-60m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "transaction-10m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "transaction-1m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
        "transaction-60m": Object {
          "1d": Object {
            "doc_count": 0,
          },
          "all": Object {
            "total": Object {
              "docs": Object {
                "count": 0,
              },
              "shards": 0,
              "store": Object {
                "size_in_bytes": 0,
              },
            },
          },
        },
      },
      "shards": Object {
        "total": 0,
      },
    },
    "shards": Object {
      "total": 0,
    },
    "traces": Object {
      "all": Object {
        "total": Object {
          "docs": Object {
            "count": 0,
          },
          "store": Object {
            "size_in_bytes": 0,
          },
        },
      },
      "shards": Object {
        "total": 0,
      },
    },
  },
}
`;
